--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "quipper-ds",
   "version": "4.1.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Eugie Limpin",
   "license": "MIT",
-  "dependencies": {
+  "devDependencies": {
     "tailwindcss": "^1.6.0"
   }
 }
